--- a/styles.css
+++ b/styles.css
@@ -17,12 +17,12 @@ header {
   position: fixed;
   z-index: 1;
   top: 20px;
-  left: 20px;
+  left: 0;
   background: #f7f7f7;
   overflow-x: hidden;
   padding: 15px;
   border-radius: 10px;
-  font-size: 1.2rem;
+  font-size: 2vh;
 }
 
 #navbar a {
@@ -31,32 +31,40 @@ header {
   border-radius: 10px;
 }
 #navbar a:hover {
-  color: #064579;
+  color: #f36d33;
   background: #ffffff;
   border: solid 1px rgba(219, 219, 219, 0.6);
   border-radius: 10px;
 }
 
+.active {
+  color: #f36d33 !important;
+  background: #ffffff;
+  border: solid 1px rgba(219, 219, 219, 0.6);
+  border-radius: 10px;
+}
 #navbar header {
-  font-weight: 900;
-  font-size: 2rem;
+  font-weight: bold;
+  font-size: 4vh;
   padding: 10px;
+  text-transform: uppercase;
+  color: #f36d33;
 }
 
 hr {
   margin-top: 0;
-  /* border-style: double; */
 }
 #main-doc {
-  /* margin-left: 35vh; */
   font-size: 1rem;
   margin: 2vh 2vh 2vh 45vh;
 }
 
 #main-doc header {
-  background: #4b4d4e;
-  padding: 10px;
+  background: rgba(0, 0, 0, 0.6);
+  padding: 5px;
+  border-bottom: 1px solid #f36d33;
   border-radius: 5px;
+  font-size: medium;
   color: #f7f7f7;
 }
 
@@ -77,6 +85,42 @@ img {
   width: 100%;
   height: auto;
   padding: 0 40vh;
+  margin-bottom: 10px;
+}
+
+code {
+  color: #f36d33;
+}
+pre {
+  background: #1a1d1f;
+  color: #f7f7f7;
+  font-size: 12px;
+  border-radius: 10px;
+  padding-top: 1rem;
+  border-left: 3px solid #f36d33;
+  page-break-inside: avoid;
+}
+
+.command {
+  background: #1a1d1f;
+  padding: 10px;
+  border-radius: 10px;
+  color: #f7f7f7;
+  border-left: 3px solid #f36d33;
+}
+
+.result-background {
+  background: rgba(238, 237, 237, 0.6);
+  border-radius: 10px;
+}
+
+.result-background p {
+  font-weight: 900;
+}
+
+.example {
+  font-weight: bold;
+  text-decoration: underline;
 }
 
 @media screen and (max-width: 1200px) {
@@ -112,6 +156,9 @@ img {
     width: 15vh;
     font-size: 2.5vw;
   }
+  #navbar header {
+    font-size: 3vw;
+  }
 
   #main-doc {
     margin-left: 20vh;
@@ -123,14 +170,4 @@ img {
     margin: 5px 0;
     padding: 5px;
   }
-}
-
-pre {
-  background: #1a1d1f;
-  color: #f7f7f7;
-  font-size: 12px;
-  border-radius: 10px;
-  padding-top: 1rem;
-  border-left: 3px solid #f36d33;
-  page-break-inside: avoid;
 }
